# nanonetcpp

./: .gitignore  CMakeLists.txt  README.md
example/: example-gpt.cpp  example-mnist.cpp  example-sine.cpp  example.cpp  example_gpt_validation.py  example_mnist_validation.py  example_sine_validation.py  example_validation_weight_visualizer.py  weight_visualizer.html
src/: adamoptimizer.h  arena.h  attentionlayer.h  autograd.h  conv2dlayer.h  embeddinglayer.h  handle.h  linearlayer.h  mlplayer.h  parametercheckpoint.h  plainarray.h  rmsnormlayer.h  softmaxlayer.h  tensor.h  tests.cpp  transformerblock.h
